--- a/src/SCSS/index.css
+++ b/src/SCSS/index.css
@@ -65,26 +65,30 @@
     background-color: rgba(0, 0, 0, 0);
   }
 }
-section {
-  font-family: "PT Sans Narrow", Arial, sans-serif;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Space Mono", monospace;
   margin: 0;
   padding: 0;
   color: rgb(42, 42, 42);
-  background-image: url("/src/assets/images/respeito.png");
+  background-image: url("../assets/images/respeito.png");
   box-sizing: border-box;
 }
-section.logged-in .login-view {
+body.logged-in .login-view {
   opacity: 0;
   visibility: hidden;
 }
-section.logging .login-view .login-buttons-container {
-  /* display: none; */
+body.logging .login-view .login-buttons-container {
+  display: none;
 }
-section.logging .loading-container {
+body.logging .loading-container {
   display: block;
   font-size: 2.3rem;
 }
-section .login-view {
+body .login-view {
   position: fixed;
   top: 0;
   left: 0;
@@ -94,14 +98,14 @@ section .login-view {
   justify-content: center;
   align-items: center;
   z-index: 1;
-  background-image: url("/src/assets/images/respeito.png");
+  background-image: url("../assets/images/respeito.png");
 }
-section .login-view .login-buttons-container .btn {
+body .login-view .login-buttons-container .btn {
   cursor: pointer;
   display: block;
   width: 100%;
   padding: 20px 20px 20px 60px;
-  background-image: url("/static/imgs/google-original.svg");
+  background-image: url("../../static/imgs/google-original.svg");
   background-repeat: no-repeat;
   background-size: 30px;
   background-position: 10% center;
@@ -111,90 +115,79 @@ section .login-view .login-buttons-container .btn {
   border-radius: 3px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
-section .login-view .login-buttons-container .btn.anonymous-log-in-btn {
-  background-image: url("/static/imgs/account.svg");
+body .login-view .login-buttons-container .btn.anonymous-log-in-btn {
+  background-image: url("../../static/imgs/account.svg");
 }
-section .loading-container {
+body .loading-container {
   display: none;
 }
-section .top-bar-1 {
-  /* display: flex;
+body .top-bar {
+  display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #e3dbb6;
   padding: 12px 5px 0px 5px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-  border-bottom: solid 3px #a9a078; 
-  & > :nth-child(1) {
-    width: 200px;
-    height: 95px;
-    overflow: hidden;
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center bottom;
-      display: block;
-    }
-  }*/
+  border-bottom: solid 3px #a9a078;
 }
-section .top-bar-1 > :nth-child(1) {
+body .top-bar > :nth-child(1) {
+  width: 200px;
+  height: 95px;
+  overflow: hidden;
+}
+body .top-bar > :nth-child(1) img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center bottom;
+     object-position: center bottom;
+  display: block;
+}
+body .top-bar > :nth-child(2) {
   display: flex;
-  justify-content: end;
+  justify-content: center;
   align-items: center;
-  margin-right: 1em;
 }
-section .top-bar-1 > :nth-child(1) .photo-user {
+body .top-bar > :nth-child(2) img {
   border-radius: 50%;
   overflow: hidden;
   background-color: #fff;
-  width: 5rem;
-  height: 5rem;
+  width: 80px;
   border: solid 3px #fffbe9;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
   margin-right: 10px;
 }
-section .top-bar-1 > :nth-child(1) .log-out-btn {
-  width: 4rem;
-  height: 4rem;
+body .top-bar > :nth-child(2) button {
+  font-size: 3rem;
   background-color: #fffcef;
+  letter-spacing: -17px;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   overflow: hidden;
   border: none;
 }
-section .novel-view {
+body .novel-view {
   max-width: 1000px;
   margin: 0 auto 0 auto;
   padding: 30px 30px;
 }
-section .novel-view .description {
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
+body .novel-view .description {
   background-color: white;
   padding: 40px;
 }
-section .novel-view .description h1 {
-  text-align: center;
-  margin: 0em;
+body .novel-view .description h1 {
+  margin: 0px;
 }
-section .novel-view .description p {
-  margin-top: 1em;
-}
-section .novel-view .description .list li {
-  list-style-type: initial;
-  list-style-position: inside;
-  list-style-position: outside;
-}
-section .novel-view .novel-container .novel-part-container {
+body .novel-view .novel-container .novel-part-container {
   position: relative;
   padding: 20px 30px;
   border-bottom: solid 1px #cdcdcd;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-  background-image: url("/static/imgs/lined_paper.png");
+  background-image: url("../../static/imgs/lined_paper.png");
   font-size: 1.3rem;
 }
-section .novel-view .novel-container .novel-part-container .delete-btn {
+body .novel-view .novel-container .novel-part-container .delete-btn {
   position: absolute;
   top: 5px;
   right: 25px;
@@ -203,43 +196,43 @@ section .novel-view .novel-container .novel-part-container .delete-btn {
   background-color: transparent;
   border: none;
 }
-section .novel-view .novel-container .novel-part-container .delete-btn .delete-label {
+body .novel-view .novel-container .novel-part-container .delete-btn .delete-label {
   font-size: 0.8rem;
 }
-section .novel-view .novel-container .novel-part-container .meta {
+body .novel-view .novel-container .novel-part-container .meta {
   text-align: right;
   font-size: 0.8rem;
 }
-section .novel-view .form-container textarea {
+body .novel-view .form-container textarea {
   display: block;
   box-sizing: border-box;
   border: none;
   width: 100%;
   padding: 20px;
-  font-family: "PT Sans Narrow", Arial, sans-serif;
+  font-family: "Space Mono", monospace;
   margin-bottom: 10px;
   font-size: 1rem;
   resize: none;
 }
-section .novel-view .form-container button[type=submit] {
+body .novel-view .form-container button[type=submit] {
   display: block;
   width: 100%;
   background-color: #fffcef;
   border: none;
   border-radius: 5px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
-  font-size: 2rem;
-  font-family: "PT Sans Narrow", Arial, sans-serif;
+  font-size: 1.5rem;
+  font-family: "Space Mono", monospace;
   cursor: pointer;
   padding: 15px 0;
 }
 
 @media screen and (max-width: 600px) {
-  section .login-view {
+  body .login-view {
     display: block;
     padding: 20px;
   }
-  section .login-view img {
+  body .login-view img {
     width: 100%;
   }
 }/*# sourceMappingURL=index.css.map */
