--- a/src/SCSS/index.scss
+++ b/src/SCSS/index.scss
@@ -2,12 +2,16 @@
 
 @import "./dots-animation.scss";
 
-section {
-  font-family: 'PT Sans Narrow', Arial, sans-serif;;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Space Mono", monospace;
   margin: 0;
   padding: 0;
   color: rgb(42, 42, 42);
-  background-image: url("/src/assets/images/respeito.png"); 
+  background-image: url("../assets/images/respeito.png");
   box-sizing: border-box;
   &.logged-in {
     .login-view {
@@ -18,7 +22,7 @@ section {
   &.logging {
     .login-view {
       .login-buttons-container {
-        /* display: none; */
+        display: none;
       }
     }
     .loading-container {
@@ -36,14 +40,14 @@ section {
     justify-content: center;
     align-items: center;
     z-index: 1;
-    background-image: url("/src/assets/images/respeito.png");
-        .login-buttons-container {
+    background-image: url("../assets/images/respeito.png");
+    .login-buttons-container {
       .btn {
         cursor: pointer;
         display: block;
         width: 100%;
         padding: 20px 20px 20px 60px;
-        background-image: url("/static/imgs/google-original.svg");
+        background-image: url("../../static/imgs/google-original.svg");
         background-repeat: no-repeat;
         background-size: 30px;
         background-position: 10% center;
@@ -53,7 +57,7 @@ section {
         border-radius: 3px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         &.anonymous-log-in-btn {
-          background-image: url("/static/imgs/account.svg");
+          background-image: url("../../static/imgs/account.svg");
         }
       }
     }
@@ -61,14 +65,14 @@ section {
   .loading-container {
     display: none;
   }
-  .top-bar-1 {
-    /* display: flex;
+  .top-bar {
+    display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #e3dbb6;
     padding: 12px 5px 0px 5px;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-    border-bottom: solid 3px #a9a078; 
+    border-bottom: solid 3px #a9a078;
     & > :nth-child(1) {
       width: 200px;
       height: 95px;
@@ -80,27 +84,24 @@ section {
         object-position: center bottom;
         display: block;
       }
-    }*/
-    & > :nth-child(1) {
+    }
+    & > :nth-child(2) {
       display: flex;
-      justify-content: end;
+      justify-content: center;
       align-items: center;
-      margin-right: 1em;
-      .photo-user {
+      img {
         border-radius: 50%;
         overflow: hidden;
         background-color: #fff;
-        width: 5rem;
-        height: 5rem;
+        width: 80px;
         border: solid 3px #fffbe9;
         box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
         margin-right: 10px;
       }
-      .log-out-btn {
-        width: 4rem;
-        height: 4rem;
+      button {
+        font-size: 3rem;
         background-color: #fffcef;
-      
+        letter-spacing: -17px;
         box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
         border-radius: 4px;
         overflow: hidden;
@@ -113,21 +114,10 @@ section {
     margin: 0 auto 0 auto;
     padding: 30px 30px;
     .description {
-      box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
-      border-radius: 4px;
       background-color: white;
       padding: 40px;
       h1 {
-        text-align: center;
-        margin: 0em;
-      }
-      p{
-        margin-top: 1em;
-      }
-      .list li{
-        list-style-type:initial;
-        list-style-position: inside;
-        list-style-position: outside;
+        margin: 0px;
       }
     }
     .novel-container {
@@ -136,7 +126,7 @@ section {
         padding: 20px 30px;
         border-bottom: solid 1px #cdcdcd;
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-        background-image: url("/static/imgs/lined_paper.png");
+        background-image: url("../../static/imgs/lined_paper.png");
         font-size: 1.3rem;
         .delete-btn {
           position: absolute;
@@ -163,7 +153,7 @@ section {
         border: none;
         width: 100%;
         padding: 20px;
-        font-family:'PT Sans Narrow', Arial, sans-serif;
+        font-family: "Space Mono", monospace;
         margin-bottom: 10px;
         font-size: 1rem;
         resize: none;
@@ -175,8 +165,8 @@ section {
         border: none;
         border-radius: 5px;
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
-        font-size: 2rem;
-        font-family: 'PT Sans Narrow', Arial, sans-serif;
+        font-size: 1.5rem;
+        font-family: "Space Mono", monospace;
         cursor: pointer;
         padding: 15px 0;
       }
@@ -185,7 +175,7 @@ section {
 }
 
 @media screen and (max-width: 600px) {
-  section {
+  body {
     .login-view {
       display: block;
       padding: 20px;
