--- a/src/SCSS/index.css
+++ b/src/SCSS/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;1,700&display=swap");
 .dot-flashing {
   display: inline-block;
@@ -70,7 +72,7 @@
 }
 
 body {
-  font-family: "Space Mono", monospace;
+  font-family: "PT Sans Narrow", sans-serif;
   margin: 0;
   padding: 0;
   color: rgb(42, 42, 42);
@@ -86,7 +88,7 @@ body.logging .login-view .login-buttons-container {
 }
 body.logging .loading-container {
   display: block;
-  font-size: 2.3rem;
+  font-size: 2rem;
 }
 body .login-view {
   position: fixed;
@@ -95,6 +97,7 @@ body .login-view {
   width: 100%;
   height: 100%;
   display: flex;
+  color: #fff;
   justify-content: center;
   align-items: center;
   z-index: 1;
@@ -112,8 +115,8 @@ body .login-view .login-buttons-container .btn {
   background-color: #fffcef;
   border: none;
   margin-bottom: 20px;
-  border-radius: 3px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 }
 body .login-view .login-buttons-container .btn.anonymous-log-in-btn {
   background-image: url("../../static/imgs/account.svg");
@@ -125,14 +128,11 @@ body .top-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #e3dbb6;
   padding: 12px 5px 0px 5px;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-  border-bottom: solid 3px #a9a078;
 }
 body .top-bar > :nth-child(1) {
-  width: 200px;
-  height: 95px;
+  width: 100px;
+  height: 85px;
   overflow: hidden;
 }
 body .top-bar > :nth-child(1) img {
@@ -153,13 +153,13 @@ body .top-bar > :nth-child(2) img {
   border-radius: 50%;
   overflow: hidden;
   background-color: #fff;
-  width: 80px;
+  width: 60px;
   border: solid 3px #fffbe9;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
   margin-right: 10px;
 }
 body .top-bar > :nth-child(2) button {
-  font-size: 3rem;
+  font-size: 50px;
   background-color: #fffcef;
   letter-spacing: -17px;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
@@ -174,18 +174,23 @@ body .novel-view {
 }
 body .novel-view .description {
   background-color: white;
+  border-radius: 3px;
   padding: 40px;
 }
-body .novel-view .description h1 {
+body .novel-view .description h3 {
+  text-align: center;
   margin: 0px;
+}
+body .novel-view .description p, body .novel-view .description li {
+  font-size: 14px;
 }
 body .novel-view .novel-container .novel-part-container {
   position: relative;
   padding: 20px 30px;
-  border-bottom: solid 1px #cdcdcd;
+  border-bottom: solid 3px #cdcdcd;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
   background-image: url("../../static/imgs/lined_paper.png");
-  font-size: 1.3rem;
+  font-size: 18px;
 }
 body .novel-view .novel-container .novel-part-container .delete-btn {
   position: absolute;
@@ -209,7 +214,7 @@ body .novel-view .form-container textarea {
   border: none;
   width: 100%;
   padding: 20px;
-  font-family: "Space Mono", monospace;
+  font-family: "Oswald", sans-serif;
   margin-bottom: 10px;
   font-size: 1rem;
   resize: none;
@@ -222,7 +227,7 @@ body .novel-view .form-container button[type=submit] {
   border-radius: 5px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
   font-size: 1.5rem;
-  font-family: "Space Mono", monospace;
+  font-family: "Oswald", sans-serif;
   cursor: pointer;
   padding: 15px 0;
 }
