--- a/src/SCSS/index.scss
+++ b/src/SCSS/index.scss
@@ -1,5 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;1,700&display=swap");
 
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;1,700&display=swap");
 @import "./dots-animation.scss";
 
 * {
@@ -7,7 +9,7 @@
 }
 
 body {
-  font-family: "Space Mono", monospace;
+  font-family: 'PT Sans Narrow', sans-serif;
   margin: 0;
   padding: 0;
   color: rgb(42, 42, 42);
@@ -27,7 +29,7 @@ body {
     }
     .loading-container {
       display: block;
-      font-size: 2.3rem;
+      font-size: 2rem;
     }
   }
   .login-view {
@@ -37,6 +39,7 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
+    color: #fff;
     justify-content: center;
     align-items: center;
     z-index: 1;
@@ -54,8 +57,8 @@ body {
         background-color: #fffcef;
         border: none;
         margin-bottom: 20px;
-        border-radius: 3px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        border-radius: 5px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
         &.anonymous-log-in-btn {
           background-image: url("../../static/imgs/account.svg");
         }
@@ -69,13 +72,10 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #e3dbb6;
     padding: 12px 5px 0px 5px;
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-    border-bottom: solid 3px #a9a078;
     & > :nth-child(1) {
-      width: 200px;
-      height: 95px;
+      width: 100px;
+      height: 85px;
       overflow: hidden;
       img {
         width: 100%;
@@ -93,13 +93,13 @@ body {
         border-radius: 50%;
         overflow: hidden;
         background-color: #fff;
-        width: 80px;
+        width: 60px;
         border: solid 3px #fffbe9;
         box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
         margin-right: 10px;
       }
       button {
-        font-size: 3rem;
+        font-size: 50px;
         background-color: #fffcef;
         letter-spacing: -17px;
         box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
@@ -115,19 +115,25 @@ body {
     padding: 30px 30px;
     .description {
       background-color: white;
+      border-radius: 3px;
       padding: 40px;
-      h1 {
+      h3 {
+        text-align: center;
         margin: 0px;
       }
+      p, li {
+        font-size: 14px;
+      }
+     
     }
     .novel-container {
       .novel-part-container {
         position: relative;
         padding: 20px 30px;
-        border-bottom: solid 1px #cdcdcd;
+        border-bottom: solid 3px #cdcdcd;
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
         background-image: url("../../static/imgs/lined_paper.png");
-        font-size: 1.3rem;
+        font-size: 18px;
         .delete-btn {
           position: absolute;
           top: 5px;
@@ -153,7 +159,7 @@ body {
         border: none;
         width: 100%;
         padding: 20px;
-        font-family: "Space Mono", monospace;
+        font-family: 'Oswald', sans-serif;
         margin-bottom: 10px;
         font-size: 1rem;
         resize: none;
@@ -166,7 +172,7 @@ body {
         border-radius: 5px;
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
         font-size: 1.5rem;
-        font-family: "Space Mono", monospace;
+        font-family: 'Oswald', sans-serif;
         cursor: pointer;
         padding: 15px 0;
       }
