--- a/src/SCSS/index.css
+++ b/src/SCSS/index.css
@@ -100,13 +100,14 @@ body .login-view {
   color: #fff;
   justify-content: center;
   align-items: center;
+  text-align: center;
   z-index: 1;
   background-image: url("../assets/images/respeito.png");
 }
 body .login-view .login-buttons-container .btn {
   cursor: pointer;
   display: block;
-  width: 100%;
+  width: 30%;
   padding: 20px 20px 20px 60px;
   background-image: url("../../static/imgs/google-original.svg");
   background-repeat: no-repeat;
@@ -114,12 +115,19 @@ body .login-view .login-buttons-container .btn {
   background-position: 10% center;
   background-color: #fffcef;
   border: none;
+  margin-left: 35%;
   margin-bottom: 20px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 }
 body .login-view .login-buttons-container .btn.anonymous-log-in-btn {
   background-image: url("../../static/imgs/account.svg");
+}
+body .logo-img {
+  width: 30%;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+  margin-bottom: 20px;
 }
 body .loading-container {
   display: none;
@@ -133,7 +141,7 @@ body .top-bar {
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
 }
 body .top-bar > :nth-child(1) {
-  width: 200px;
+  width: 80px;
   height: 85px;
   overflow: hidden;
 }
@@ -239,7 +247,28 @@ body .novel-view .form-container button[type=submit] {
     display: block;
     padding: 20px;
   }
-  body .login-view img {
-    width: 100%;
+}
+@media screen and (max-width: 600px) {
+  .login-buttons-container {
+    margin-top: 140px;
+  }
+}
+@media screen and (max-width: 600px) {
+  img.logo-img {
+    width: 92%;
+  }
+}
+@media screen and (max-width: 600px) {
+  body .login-view .login-buttons-container .btn.anonymous-log-in-btn {
+    width: auto;
+    margin: auto;
+    margin-bottom: 20px;
+    padding: 20px 60px;
+  }
+}
+@media screen and (max-width: 600px) {
+  body .login-view .login-buttons-container .btn.google-log-in-btn {
+    width: auto;
+    margin: auto;
   }
 }/*# sourceMappingURL=index.css.map */
